# gerador-de-apostila-api

./: .dockerignore  .gitignore  Dockerfile  README.md  README_DEPLOY.md  analyze_template.py  deploy.ps1  pyproject.toml  requirements.txt
.github/workflows/: master_apigeradordeapostila.yml
api/: agent.py  app.py  auth_middleware.py  database.py  db_models.py  models.py  storage.py  worker.py
template/: Template Docx.docx
